<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">EGE</string>

    <string name="title_activity_user_choose">Choose user</string>
    <string name="title_activity_lesson_choose">Choose lesson</string>
    <string name="title_activity_view_tasks">View tasks, %1$s</string>
    <string name="title_activity_start_testing">Start testing, %1$s</string>
    <string name="title_activity_view_results">View results, %1$s</string>    
    <string name="title_activity_calculate_tasks">Make calculations, %1$s</string>
    <string name="title_activity_calculate_testing">Testing, %1$s</string>
    <string name="title_activity_calculate_results">Results, %1$s</string>    

    <string name="insert_name">Insert name</string>
    <string name="choose_lesson">Lesson</string>
    <string name="traffic_warning">Warning! This application requires downloading from the Internet, and may require an additional charge for traffic</string>
    <string name="view_tasks">View tasks</string>
    <string name="start_testing">Start testing</string>
    <string name="view_results">View results</string>
    <string name="name_is_empty">Please insert name</string>    
    <string name="not_finished">Not finished</string>
    <string name="finished">Finished</string>
    <string name="time_left">Time left = %1$s:%2$s:%3$s</string>
    <string name="task_header">%1$s. Task № %2$d</string>
    <string name="download_error">Download error</string>
    <string name="retry">Retry</string>
    <string name="give_answer">Answer</string>
    <string name="time_for_exam">Time = %1$s:%2$s:%3$s</string>
    <string name="A_task_count">A tasks : %1$d</string>
    <string name="B_task_count">B tasks : %1$d</string>
    <string name="C_task_count">C tasks : %1$d</string>
    <string name="total_task_count">Total tasks : %1$d</string>
    <string name="start">Start</string>
    <string name="do_you_want_to_finish">Do you want to finish?</string>
    <string name="not_correct">Not correct</string>
    <string name="correct">Correct</string>
    <string name="answer">Answer: %1$s</string>
    <string name="is_it_correct">Do you give this answer?\n\n%1$s</string>
    <string name="is_it_correct_self">Do you give this answer?\n\n%1$s\n\nPlease set your score</string>
    <string name="checking">Checking</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_wifi">Only Wi-Fi</string>
    <string name="pref_description_wifi">Do not use Mobile Network</string>
    
    <string name="triplePoint" translatable="false">&#8230;</string>
    <string name="time" translatable="false">%1$s:%2$s:%3$s</string>
    <string name="percent" translatable="false">%1$d %%</string>    
    
</resources>
