<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	tools:context=".MainActivity">

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/insert_name"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName">
        <requestFocus/>
    </EditText>

    <RelativeLayout
    	android:layout_width="match_parent"
    	android:layout_height="wrap_content">

    	<TextView
    		android:id="@+id/lessonTextView"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_alignParentLeft="true"
    		android:layout_centerVertical="true"
    		android:text="@string/choose_lesson"
    		android:textAppearance="?android:attr/textAppearanceLarge"/>
    	
    	<Button
            android:id="@+id/lessonButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/lessonTextView"/>

    </RelativeLayout>

    <Button
        android:id="@+id/viewTasksButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_tasks"/>

    <Button
        android:id="@+id/startTestButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_testing"/>

    <Button
        android:id="@+id/viewResultsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_results"/>

</LinearLayout>
